# car_emulator_esp32

./: .gitignore  .gitmodules
car_emulator_esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
car_emulator_esp32/main/: CMakeLists.txt  cantp_config.h  cantp_esp32.c  cantp_esp32.h  car_emulator.c  car_emulator.h  main.c  obd.c  obd.h
